# checkup

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md
database/: database.db
migrations/: 20251115175718_create_watchers_table.sql  20251214032115_create_pings_table.sql
src/: database.rs  main.rs  routes.rs  watching.rs
src/features/: mod.rs
src/features/pings/: mod.rs  pings_repository.rs
src/features/watchers/: mod.rs  watcher_handler.rs  watcher_repository.rs  worker.rs
src/features/watching/: mod.rs
src/handlers/: add_watcher.rs  mod.rs  watcher_handler.rs
src/middlewares/: basic_log.rs  mod.rs
src/models/: watcher.rs
src/repositories/: mod.rs  pings_repository.rs  watcher_repository.rs
