[package]
name = "checkup"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = "0.15.7"
poem = "3.1.12"
poem-openapi = "5.1.16"
serde = "1.0.228"
sqlx = {version = "0.8.6", features = [ "runtime-tokio-rustls", "sqlite", "macros" ] }
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }
