[package]
name = "checkup"
version = "0.1.0"
edition = "2024"

[dependencies]
async-channel = "2.5.0"
dotenvy = "0.15.7"
futures = "0.3.31"
poem = "3.1.12"
poem-openapi = "5.1.16"
reqwest = { version = "0.12.25", features = ["json"] }
serde = "1.0.228"
chrono = { version = "0.4", features = ["serde"] }
sqlx = {version = "0.8.6", features = [ "runtime-tokio-rustls", "sqlite", "macros", "chrono" ] }
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }
